2006-08-14 Jens Tkotz <jens@peino.de>

 ***  Release: 1.5.4 ***


2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b17

 * Fix: #1444556;

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b16

 * Change: _() to gTranslate at various places.

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b15

 * Change: Use non-table tabs from 1.6

 * HTML fixes in setup/config_data.inc

 * Adjustments in skins: hotred, yellow, jenskin, white1

 * Some indenting.

 * if galleryLink as empty target, dont use href=

2006-08-13 Jens Tkotz <jens@peino.de> 1.5.4-svn-b14

 * Change: Removed "No Votes messages".

 * Change: Show link to full results only if there are results.

2006-08-13 Jens Tkotz <jens@peino.de> 1.5.4-svn-b13
 
 * Fix: Links in voting box were wrong.

 * CSS changes in view_album.php

 * Jensskin updates.

2006-08-02 Jens Tkotz <jens@peino.de> 1.5.4-svn-b12

 * Fix: JS warning in ImageMap when no ImageMap is available.
   Thanks to StephaneT from forums.

 * Little CSS changes in jenskin.

2006-07-29 Jens Tkotz <jens@peino.de> 1.5.4-svn-b11

 * Fix: Order of captions was mixed in IE and Opera when given direct in the form.
	Fixed by using this.nextSibling in insertBefore()

2006-07-21 Jens Tkotz <jens@peino.de> 1.5.4-svn-b10

 * Fix: drawSelect in slideshow misbehaved and selected the wrong transition.

2006-07-12 Jens Tkotz <jens@peino.de> 1.5.4-svn-b9

 * Fix: Little warning in configwizard ; occured in first install.

2006-06-19 Jens Tkotz <jens@peino.de> 1.5.4-svn-b8

 * Fix: init_language() is not called redundant in init.php

 * Change: When user updates his language, the parent page is reloaded with the new language.

2006-06-19 Jens Tkotz <jens@peino.de> 1.5.4-svn-b7

 * PHP5 fix:
   In classes/Mail/htmlMimeMail.php and do_command.php was $HTTP_SERVER_VARS used,
   which is not longer present in PHP5

 * Fix: Correct use of $MIN_PHP_MAJOR_VERSION in lib/setup.php

 * SVN-Fix:
   Date of last change in Version.php was wrong extracted.
 