@@ -47,6 +47,7 @@
 <?php
 
 makeSectionTabs($constants);
+echo '<input name="initialtab" id="initialtab" type="hidden" value="'. $initialtab .'">';
 echo "<div style=\"clear: both\"></div>";
 
 ?>
