@@ -1,7 +1,16 @@
+2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b1
+
+ * Fix: Font color issue in multifile Js
+
+ * Fix: "next tab" was broken in Config
+
+ * Fix: Preloading feature in FF does not increase the counter
+	in view_album and view_photo.
+	(Thanks to Jade)
+
 2006-08-14 Jens Tkotz <jens@peino.de>
 
  ***  Release: 1.5.4 ***
-
 
 2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b17
 
